fixed dark mode in pages, header z-index and added 2 days of accessToken for dev environment

--- a/frontend/src/app/hompage/helper/helper.component.css
+++ b/frontend/src/app/hompage/helper/helper.component.css
@@ -1,6 +1,6 @@
 @media (prefers-color-scheme: dark) {
   * {
-    background-color: #000;
+    background-color: #141414;
     color: #fff;
   }
 }
